kubernetes/apps/default/seerr/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-authentik
  namespace: default
  labels:
    external-dns.io/enabled: "true"
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
    - name: external
      namespace: kube-system
  hostnames:
    - seerr.jenya.lol
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
